old_tests/fail/non_exhaustive_pattern_int/main.sk
module Main where

main = do
    a <- 5
    case a of
        5 -> ()
        1 -> ()
